# agentsandbox

./: .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  HOMEBREW_SETUP.md  MIGRATION.md  Makefile  README.md  agentsandbox.rb  go.mod  go.sum  install.js  package-lock.json  package.json  test_ps_issue.rs  test_ps_issue_v2.rs
.cargo/: config.toml
.github/workflows/: build.yml
changelog/: 0.1.1.md  0.1.2.md
cmd/agentsandbox/: main.go
internal/cli/: attach.go  cleanup.go  copy_config.go  list.go  logs.go  root.go  start.go
internal/clipboard/: watcher.go
internal/config/: agent.go  agent_test.go  settings.go
internal/container/: manager.go  manager_test.go  naming.go  naming_test.go  runtime.go  runtime_test.go
internal/git/: worktree.go
internal/language/: detector.go
internal/logs/: parser.go  viewer.go
internal/state/: state.go
release_notes/: 1.1.0.md
scripts/: build.sh  clipboard-watcher.sh  container-clipboard-helper.sh  prepare-npm.sh
src/: cli.rs  clipboard.rs  config.rs  language.rs  lib.rs  log_parser.rs  log_viewer.rs  main.rs  settings.rs  startup_log.rs  state.rs  worktree.rs
src/container/: manage.rs  mod.rs  naming.rs  runtime.rs
src/server/: api.rs  mod.rs  terminal.rs
tests/: cli_test.rs  config_test.rs  container_test.rs  language_test.rs  main_test.rs  runtime_test.rs  server_test.rs  settings_test.rs  state_test.rs  worktree_test.rs
web/src/components/: terminal.tsx
