[package]
name = "agentsandbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentsandbox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
home = "0.5"
chrono = { version = "0.4", features = ["clock"] }
tempfile = "3.8"
atty = "0.2"
once_cell = "1.19"
tabled = "0.20"
reqwest = "0.11"
base64 = "0.21"

[dev-dependencies]
